Primeras pruebas de código

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Primera Entrega JS</h1>
     <h2>Pablo Messa </h2>
 
+   <img src="../img/flujo.png" alt="diagrama de lo que se realizó con JS">
     <script src="PreEntrega1Messa.js"></script>
 </body>
 </html>
