--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     <h1>Primera Entrega JS</h1>
     <h2>Pablo Messa </h2>
 
-   <img src="../img/flujo.png" alt="diagrama de lo que se realizó con JS">
-    <script src="PreEntrega1Messa.js"></script>
+   <img src="../img/flujo.png" alt="diagrama de lo que se realizo con JS">
+    <script src="entrega1-Messa.js"></script>
 </body>
 </html>
